--- a/actors.tex
+++ b/actors.tex
@@ -86,7 +86,7 @@
 {
 Recogizer Group GmbH\\ % Your institution for the title page
 \medskip
-\textit{bernhard.stoecker@recogizer.com} % Your email address
+\textit{bernhard.stoecker@recogizer.de} % Your email address
 }
 \date{\today} % Date, can be changed to a custom date
 
@@ -201,36 +201,20 @@ Wikipedia:
 
 %------------------------------------------------
 
-\begin{frame}[fragile] % Need to use the fragile option when verbatim is used in the slide
-\frametitle{Verbatim}
-\begin{example}[Theorem Slide Code]
-\begin{verbatim}
 \begin{frame}
-\frametitle{Theorem}
-\begin{theorem}[Mass--energy equivalence]
-$E = mc^2$
-\end{theorem}
-\end{frame}\end{verbatim}
-\end{example}
+\frametitle{Actors in Scala}
 \end{frame}
 
 %------------------------------------------------
 
 \begin{frame}
-\frametitle{Figure}
-Uncomment the code on this slide to include your own image from the same directory as the template .TeX file.
-%\begin{figure}
-%\includegraphics[width=0.8\linewidth]{test}
-%\end{figure}
+\frametitle{Actors in Scala}
 \end{frame}
 
 %------------------------------------------------
 
-\begin{frame}[fragile] % Need to use the fragile option when verbatim is used in the slide
-\frametitle{Citation}
-An example of the \verb|\cite| command to cite within the presentation:\\~
-
-This statement requires citation \cite{p1}.
+\begin{frame}[fragile]
+\frametitle{Actors in Scala}
 \end{frame}
 
 %TODO some refs
