--- a/actors.tex
+++ b/actors.tex
@@ -124,7 +124,7 @@ Wikipedia:
 \begin{itemize}
 \item A mathematical model of concurrent computation
 \item Actors can hold and modify private state
-\item Affects each other throgh messages only
+\item Affects each other through messages only
 \item In response to a message that it receives, an actor can:
 \begin{itemize}
 \item Make local decisions
