Add first slides regarding scala actors

--- a/actors.tex
+++ b/actors.tex
@@ -203,19 +203,24 @@ Wikipedia:
 
 \begin{frame}
 \frametitle{Actors in Scala}
+\includegraphics[width=1\linewidth]{./scala_example_actor.png}
 \end{frame}
 
 %------------------------------------------------
 
 \begin{frame}
 \frametitle{Actors in Scala}
+\includegraphics[width=1\linewidth]{./scala_example_main.png}
 \end{frame}
 
 %------------------------------------------------
 
-\begin{frame}[fragile]
+\begin{frame}
 \frametitle{Actors in Scala}
+\includegraphics[width=1\linewidth]{./scala_example_terminal.png}
 \end{frame}
+
+%------------------------------------------------
 
 %TODO some refs
 %------------------------------------------------
