Add scala images to .tex file and .pdf

--- a/actors.tex
+++ b/actors.tex
@@ -222,6 +222,41 @@ Wikipedia:
 
 %------------------------------------------------
 
+\begin{frame}
+\frametitle{Actors in Scala}
+\includegraphics[width=0.8\linewidth]{./parent_trait.png}
+\end{frame}
+
+%------------------------------------------------
+
+\begin{frame}
+\frametitle{Actors in Scala}
+\includegraphics[width=0.8\linewidth]{./parent_actor.png}
+\end{frame}
+
+%------------------------------------------------
+
+\begin{frame}
+\frametitle{Actors in Scala}
+\includegraphics[width=0.9\linewidth]{./parent_child.png}
+\end{frame}
+
+%------------------------------------------------
+
+\begin{frame}
+\frametitle{Actors in Scala}
+\includegraphics[width=1\linewidth]{./parent_messages.png}
+\end{frame}
+
+%------------------------------------------------
+
+\begin{frame}
+\frametitle{Actors in Scala}
+\includegraphics[width=0.8\linewidth]{./parent_main.png}
+\end{frame}
+
+%------------------------------------------------
+
 %TODO some refs
 %------------------------------------------------
 
