Add whatsapp image and slides for each section

--- a/actors.tex
+++ b/actors.tex
@@ -113,6 +113,13 @@ Recogizer Group GmbH\\ % Your institution for the title page
 
 \begin{frame}
 \frametitle{What are Actors?}
+\Huge{\centerline{What are Actors?}}
+\end{frame}
+
+%------------------------------------------------
+
+\begin{frame}
+\frametitle{What are Actors?}
 Act-or: to act: \textbf{\emph{"to do something for a particular purpose or to solve a problem"}} (From the Cambridge dictionary)
 \end{frame}
 
@@ -124,7 +131,7 @@ Wikipedia:
 \begin{itemize}
 \item A mathematical model of concurrent computation
 \item Actors can hold and modify private state
-\item Affects each other through messages only
+\item Affect each other through messages only
 \item In response to a message that it receives, an actor can:
 \begin{itemize}
 \item Make local decisions
@@ -138,6 +145,12 @@ Wikipedia:
 %------------------------------------------------
 
 \section{WhatsApp}
+
+\begin{frame}
+\frametitle{WhatsApp}
+\Huge{\centerline{WhatsApp}}
+\end{frame}
+
 
 %------------------------------------------------
 
@@ -159,7 +172,19 @@ Wikipedia:
 
 %------------------------------------------------
 
+\begin{frame}
+\frametitle{WhatsApp}
+\includegraphics[width=0.95\linewidth]{./whatsapp_actor.png}
+\end{frame}
+
+%------------------------------------------------
+
 \section{Actors in Elixir}
+
+\begin{frame}
+\frametitle{Actors in Elixir}
+\Huge{\centerline{Actors in Elixir}}
+\end{frame}
 
 %------------------------------------------------
 
@@ -198,6 +223,12 @@ Wikipedia:
 %------------------------------------------------
 
 \section{Actors in Scala}
+
+\begin{frame}
+\frametitle{Actors in Scala}
+\Huge{\centerline{Actors in Scala}}
+\end{frame}
+
 
 %------------------------------------------------
 
