Move images into own folder and adapt .tex file

--- a/actors.tex
+++ b/actors.tex
@@ -156,7 +156,7 @@ Wikipedia:
 
 \begin{frame}
 \frametitle{WhatsApp???}
-\includegraphics[width=0.8\linewidth]{./whatsup.jpg}
+\includegraphics[width=0.8\linewidth]{./images/whatsup.jpg}
 \end{frame}
 
 %------------------------------------------------
@@ -174,7 +174,7 @@ Wikipedia:
 
 \begin{frame}
 \frametitle{WhatsApp}
-\includegraphics[width=0.95\linewidth]{./whatsapp_actor.png}
+\includegraphics[width=0.95\linewidth]{./images/whatsapp_actor.png}
 \end{frame}
 
 %------------------------------------------------
@@ -190,34 +190,34 @@ Wikipedia:
 
 \begin{frame}
 \frametitle{Actors in Elixir}
-\includegraphics[width=1.2\linewidth]{./hello_elixir.jpg}
+\includegraphics[width=1.2\linewidth]{./images/hello_elixir.jpg}
 \end{frame}
 
 %------------------------------------------------
 
 \begin{frame}
 \frametitle{Actors in Elixir}
-\includegraphics[width=1.2\linewidth]{./elixir_hello_kira.jpg}
+\includegraphics[width=1.2\linewidth]{./images/elixir_hello_kira.jpg}
 \end{frame}
 
 
 \begin{frame}
 \frametitle{Actors in Elixir}
-\includegraphics[width=1.15\linewidth]{./elixir_state.png}
-\end{frame}
-
-%------------------------------------------------
-
-\begin{frame}
-\frametitle{Actors in Elixir}
-\includegraphics[width=0.6\linewidth]{./GenServerCode.jpg}
+\includegraphics[width=1.15\linewidth]{./images/elixir_state.png}
 \end{frame}
 
 %------------------------------------------------
 
 \begin{frame}
 \frametitle{Actors in Elixir}
-\includegraphics[width=1.25\linewidth]{./GenServerTerminal.jpg}
+\includegraphics[width=0.6\linewidth]{./images/GenServerCode.jpg}
+\end{frame}
+
+%------------------------------------------------
+
+\begin{frame}
+\frametitle{Actors in Elixir}
+\includegraphics[width=1.25\linewidth]{./images/GenServerTerminal.jpg}
 \end{frame}
 
 %------------------------------------------------
@@ -234,56 +234,56 @@ Wikipedia:
 
 \begin{frame}
 \frametitle{Actors in Scala}
-\includegraphics[width=1\linewidth]{./scala_example_actor.png}
+\includegraphics[width=1\linewidth]{./images/scala_example_actor.png}
 \end{frame}
 
 %------------------------------------------------
 
 \begin{frame}
 \frametitle{Actors in Scala}
-\includegraphics[width=1\linewidth]{./scala_example_main.png}
+\includegraphics[width=1\linewidth]{./images/scala_example_main.png}
 \end{frame}
 
 %------------------------------------------------
 
 \begin{frame}
 \frametitle{Actors in Scala}
-\includegraphics[width=1\linewidth]{./scala_example_terminal.png}
+\includegraphics[width=1\linewidth]{./images/scala_example_terminal.png}
 \end{frame}
 
 %------------------------------------------------
 
 \begin{frame}
 \frametitle{Actors in Scala}
-\includegraphics[width=0.8\linewidth]{./parent_trait.png}
+\includegraphics[width=0.8\linewidth]{./images/parent_trait.png}
 \end{frame}
 
 %------------------------------------------------
 
 \begin{frame}
 \frametitle{Actors in Scala}
-\includegraphics[width=0.8\linewidth]{./parent_actor.png}
+\includegraphics[width=0.8\linewidth]{./images/parent_actor.png}
 \end{frame}
 
 %------------------------------------------------
 
 \begin{frame}
 \frametitle{Actors in Scala}
-\includegraphics[width=0.9\linewidth]{./parent_child.png}
+\includegraphics[width=0.9\linewidth]{./images/parent_child.png}
 \end{frame}
 
 %------------------------------------------------
 
 \begin{frame}
 \frametitle{Actors in Scala}
-\includegraphics[width=1\linewidth]{./parent_messages.png}
+\includegraphics[width=1\linewidth]{./images/parent_messages.png}
 \end{frame}
 
 %------------------------------------------------
 
 \begin{frame}
 \frametitle{Actors in Scala}
-\includegraphics[width=0.8\linewidth]{./parent_main.png}
+\includegraphics[width=0.8\linewidth]{./images/parent_main.png}
 \end{frame}
 
 %------------------------------------------------
@@ -297,4 +297,4 @@ Wikipedia:
 
 %----------------------------------------------------------------------------------------
 
-\end{document} 
+\end{document}
