Add elixir supervisor to the slide deck

--- a/actors.tex
+++ b/actors.tex
@@ -190,34 +190,48 @@ Wikipedia:
 
 \begin{frame}
 \frametitle{Actors in Elixir}
-\includegraphics[width=1.2\linewidth]{./images/hello_elixir.jpg}
+\includegraphics[width=1\linewidth]{./images/hello_elixir.jpg}
 \end{frame}
 
 %------------------------------------------------
 
 \begin{frame}
 \frametitle{Actors in Elixir}
-\includegraphics[width=1.2\linewidth]{./images/elixir_hello_kira.jpg}
+\includegraphics[width=1\linewidth]{./images/elixir_hello_kira.jpg}
 \end{frame}
 
 
 \begin{frame}
 \frametitle{Actors in Elixir}
-\includegraphics[width=1.15\linewidth]{./images/elixir_state.png}
-\end{frame}
-
-%------------------------------------------------
-
-\begin{frame}
-\frametitle{Actors in Elixir}
-\includegraphics[width=0.6\linewidth]{./images/GenServerCode.jpg}
+\includegraphics[width=1\linewidth]{./images/elixir_state.png}
 \end{frame}
 
 %------------------------------------------------
 
 \begin{frame}
 \frametitle{Actors in Elixir}
-\includegraphics[width=1.25\linewidth]{./images/GenServerTerminal.jpg}
+\includegraphics[width=0.6\linewidth]{./images/elixir_stack.png}
+\end{frame}
+
+%------------------------------------------------
+
+\begin{frame}
+\frametitle{Actors in Elixir}
+\includegraphics[width=1\linewidth]{./images/elixir_stack_terminal.jpg}
+\end{frame}
+
+%------------------------------------------------
+
+\begin{frame}
+\frametitle{Actors in Elixir}
+\includegraphics[width=1\linewidth]{./images/elixir_stack_supervisor.png}
+\end{frame}
+
+%------------------------------------------------
+
+\begin{frame}
+\frametitle{Actors in Elixir}
+\includegraphics[width=0.95\linewidth]{./images/elixir_stack_supervisor_terminal.jpg}
 \end{frame}
 
 %------------------------------------------------
