Add summary: Elixir vs Scala

--- a/actors.tex
+++ b/actors.tex
@@ -144,10 +144,10 @@ Wikipedia:
 
 %------------------------------------------------
 
-\section{WhatsApp}
+\section{Actors in the real world}
 
 \begin{frame}
-\frametitle{WhatsApp}
+\frametitle{Actors in the real world}
 \Huge{\centerline{WhatsApp}}
 \end{frame}
 
@@ -155,14 +155,16 @@ Wikipedia:
 %------------------------------------------------
 
 \begin{frame}
-\frametitle{WhatsApp???}
+\frametitle{Actors in the real world}
 \includegraphics[width=0.8\linewidth]{./images/whatsup.jpg}
 \end{frame}
 
 %------------------------------------------------
 
 \begin{frame}
-\frametitle{WhatsApp}
+\frametitle{Actors in the real world}
+\Huge{WhatsApp}
+\Large
 \begin{itemize}
 \item Every user has an actor representing her
 \item When sending a message my actor sends a message to all related users
@@ -173,7 +175,7 @@ Wikipedia:
 %------------------------------------------------
 
 \begin{frame}
-\frametitle{WhatsApp}
+\frametitle{Actors in the real world}
 \includegraphics[width=0.95\linewidth]{./images/whatsapp_actor.png}
 \end{frame}
 
@@ -298,6 +300,57 @@ Wikipedia:
 \begin{frame}
 \frametitle{Actors in Scala}
 \includegraphics[width=0.8\linewidth]{./images/parent_main.png}
+\end{frame}
+
+%------------------------------------------------
+
+\section{Elixir vs Scala}
+
+%------------------------------------------------
+
+\begin{frame}
+\frametitle{Elixir vs Scala}
+\begin{table}
+\begin{tabular}{p{5cm} p{5cm}}
+\toprule
+\textbf{Elixir} & \textbf{Scala}\\
+\midrule
+$\bullet$ BEAM & $\bullet$ JVM \\
+$\bullet$ Everything is immutable & $\bullet$ Choice between mutable and immutable\\
+$\bullet$ Actors are recursive functions & $\bullet$ Actors are objects\\
+$\bullet$ Actors are independent from each other & $\bullet$ Actors are organized in a tree structure \\
+$\bullet$ Errors are handled by supervisor only & $\bullet$ Errors are handled or escalated to parent actor\\\bottomrule
+\end{tabular}
+%\caption{Table caption}
+\end{table}
+\end{frame}
+
+
+%------------------------------------------------
+
+\begin{frame}
+\frametitle{Elixir vs Scala}
+\Huge{Summary}
+\Large
+\begin{itemize}
+\item Scala is faster regarding pure computation speed
+\item Scala can use eco system of all JVM languages
+\item Scala is conceptual easier for beginners due to object orientation
+\end{itemize}
+\end{frame}
+
+%------------------------------------------------
+
+\begin{frame}
+\frametitle{Elixir vs Scala}
+\Huge{Summary}
+\Large
+\begin{itemize}
+\item BEAM is optimized for actor handling
+\item Elixir is more pragmatic (get things done much faster)
+\item Elixir is much easier to test
+\item Elixir can use Erlang eco system
+\end{itemize}
 \end{frame}
 
 %------------------------------------------------
