Replace some elixir terminal img by editor img

--- a/actors.tex
+++ b/actors.tex
@@ -199,13 +199,28 @@ Wikipedia:
 
 \begin{frame}
 \frametitle{Actors in Elixir}
-\includegraphics[width=1\linewidth]{./images/elixir_hello_kira.jpg}
+\includegraphics[width=1\linewidth]{./images/elixir_receive.jpg}
 \end{frame}
 
+%------------------------------------------------
 
 \begin{frame}
 \frametitle{Actors in Elixir}
-\includegraphics[width=1\linewidth]{./images/elixir_state.png}
+\includegraphics[width=1\linewidth]{./images/elixir_receive_terminal.jpg}
+\end{frame}
+
+%------------------------------------------------
+
+\begin{frame}
+\frametitle{Actors in Elixir}
+\includegraphics[width=0.8\linewidth]{./images/elixir_value.jpg}
+\end{frame}
+
+%------------------------------------------------
+
+\begin{frame}
+\frametitle{Actors in Elixir}
+\includegraphics[width=1\linewidth]{./images/elixir_value_terminal.jpg}
 \end{frame}
 
 %------------------------------------------------
