Let itemize items pop up on click

--- a/actors.tex
+++ b/actors.tex
@@ -128,12 +128,12 @@ Act-or: to act: \textbf{\emph{"to do something for a particular purpose or to so
 \begin{frame}
 \frametitle{What are Actors?}
 Wikipedia:
-\begin{itemize}
+\begin{itemize}[<+->]
 \item A mathematical model of concurrent computation
 \item Actors can hold and modify private state
 \item Affect each other through messages only
 \item In response to a message that it receives, an actor can:
-\begin{itemize}
+\begin{itemize}[<+->]
 \item Make local decisions
 \item Create more actors
 \item Send more messages
@@ -165,7 +165,7 @@ Wikipedia:
 \frametitle{Actors in the real world}
 \Huge{WhatsApp}
 \Large
-\begin{itemize}
+\begin{itemize}[<+->]
 \item Every user has an actor representing her
 \item When sending a message my actor sends a message to all related users
 \item The users receiving a message ensure the message is delivered.
@@ -347,7 +347,7 @@ $\bullet$ Errors are handled by supervisor only & $\bullet$ Errors are handled o
 \frametitle{Elixir vs Scala}
 \Huge{Summary}
 \Large
-\begin{itemize}
+\begin{itemize}[<+->]
 \item Scala is faster regarding pure computation speed
 \item Scala can use eco system of all JVM languages
 \item Scala is conceptual easier for beginners due to object orientation
@@ -360,7 +360,7 @@ $\bullet$ Errors are handled by supervisor only & $\bullet$ Errors are handled o
 \frametitle{Elixir vs Scala}
 \Huge{Summary}
 \Large
-\begin{itemize}
+\begin{itemize}[<+->]
 \item BEAM is optimized for actor handling
 \item Elixir is more pragmatic (get things done much faster)
 \item Elixir is much easier to test
