Add summary regarding actors

--- a/actors.tex
+++ b/actors.tex
@@ -319,12 +319,12 @@ Wikipedia:
 
 %------------------------------------------------
 
-\section{Elixir vs Scala}
+\section{Summary}
 
 %------------------------------------------------
 
 \begin{frame}
-\frametitle{Elixir vs Scala}
+\frametitle{Summary}
 \begin{table}
 \begin{tabular}{p{5cm} p{5cm}}
 \toprule
@@ -344,33 +344,44 @@ $\bullet$ Errors are handled by supervisor only & $\bullet$ Errors are handled o
 %------------------------------------------------
 
 \begin{frame}
-\frametitle{Elixir vs Scala}
-\Huge{Summary}
+\frametitle{Summary}
+\Huge{Scala}
 \Large
 \begin{itemize}[<+->]
-\item Scala is faster regarding pure computation speed
-\item Scala can use eco system of all JVM languages
-\item Scala is conceptual easier for beginners due to object orientation
+\item ... is faster regarding pure computation speed
+\item ... can use eco system of all JVM languages
+\item ... is conceptual easier for beginners due to object orientation
 \end{itemize}
 \end{frame}
 
 %------------------------------------------------
 
 \begin{frame}
-\frametitle{Elixir vs Scala}
-\Huge{Summary}
+\frametitle{Summary}
+\Huge{Elixir}
 \Large
 \begin{itemize}[<+->]
-\item BEAM is optimized for actor handling
-\item Elixir is more pragmatic (get things done much faster)
-\item Elixir is much easier to test
-\item Elixir can use Erlang eco system
+\item ...'s BEAM is optimized for actor handling
+\item ... is more pragmatic (get things done much faster)
+\item ... is much easier to test
+\item ... can use Erlang eco system
 \end{itemize}
 \end{frame}
 
 %------------------------------------------------
 
-%TODO some refs
+\begin{frame}
+\frametitle{Summary}
+\Huge{Actors}
+\Large
+\begin{itemize}[<+->]
+\item ... are fault tolerant
+\item ... asynchronous
+\item ... scalable
+\item ... efficient (garbage collection)
+\end{itemize}
+\end{frame}
+
 %------------------------------------------------
 
 \begin{frame}
