--- a/actors.tex
+++ b/actors.tex
@@ -319,6 +319,13 @@ Wikipedia:
 
 %------------------------------------------------
 
+\begin{frame}
+\frametitle{Actors in Scala}
+\includegraphics[width=0.9\linewidth]{./images/scala_parent_terminal.jpg}
+\end{frame}
+
+%------------------------------------------------
+
 \section{Summary}
 
 %------------------------------------------------
